--- a/lib/premiere_ecoute_web/live/discography/billboard_live.html.heex
+++ b/lib/premiere_ecoute_web/live/discography/billboard_live.html.heex
@@ -237,7 +237,7 @@
                       phx-value-rank={if second_place, do: second_place.display_rank, else: "2"}
                     >
                       <%= if second_place do %>
-                        <div class="text-yellow-400 font-bold text-lg">{second_place.count_text}</div>
+                        <div class="text-yellow-400 font-bold text-lg">{second_place.podium_count_text}</div>
                         <div class="text-white font-semibold text-base truncate">{second_place.year}</div>
                         <div class="text-gray-300 text-base truncate">{second_place.track_count} tracks</div>
                       <% end %>
@@ -256,7 +256,7 @@
                       phx-value-rank={if first_place, do: first_place.display_rank, else: "1"}
                     >
                       <%= if first_place do %>
-                        <div class="text-yellow-200 font-bold text-xl">{first_place.count_text}</div>
+                        <div class="text-yellow-200 font-bold text-xl">{first_place.podium_count_text}</div>
                         <div class="text-white font-semibold text-lg truncate">{first_place.year}</div>
                         <div class="text-yellow-100 text-lg truncate">{first_place.track_count} tracks</div>
                       <% end %>
@@ -275,7 +275,7 @@
                       phx-value-rank={if third_place, do: third_place.display_rank, else: "3"}
                     >
                       <%= if third_place do %>
-                        <div class="text-orange-400 font-bold text-lg">{third_place.count_text}</div>
+                        <div class="text-orange-400 font-bold text-lg">{third_place.podium_count_text}</div>
                         <div class="text-white font-semibold text-base truncate">{third_place.year}</div>
                         <div class="text-orange-200 text-base truncate">{third_place.track_count} tracks</div>
                       <% end %>
